--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1>File Metadata Microservice</h1>
       <section>
-        <form action="api/shorturl" method="POST">
+        <form enctype="multipart/form-data" action="api/fileAnalyze" method="POST">
           <fieldset>
             <h2>Upload a file...</h2>
             <input id="inputfield" type="file" name="upfile">
